Small text change

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Here lies just some misc stuff of mine.
 
-Just have a look in the subdirectories,
+Have a look in the subdirectories,
 maybe you will find a treasure! ;-)
